# ansible-wordpress

./: .gitignore  LICENSE  Makefile  README.md  devenv.nix  devenv.yaml  hosts  pyproject.toml  requirements.txt
playbooks/: add_blog.yaml  add_lamp.yaml  install.yaml  remove_blog.yaml  secure_sql.yaml  update_os.yaml
templates/: 000-default.conf.j2  example.com.conf.j2  wp-config.php.j2
