[tool.poetry]
name = "ansible-wordpress"
version = "2025.6.10"
description = "Use ansible to set up LAMP-servers with Wordpress."
authors = ["myrheimb@gmail.com"]
homepage = "https://github.com/myrheimb"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pdbpp = "*"
ansible = "*"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
